# new-words-discoverer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Report20170403-0046.diagsession  newwords discoverer.sln
corpus/: 红楼梦.txt
newwords discoverer/: Discoverer.cpp  Discoverer.h  main.cpp  newwords discoverer.vcxproj  newwords discoverer.vcxproj.filters
newwords_discoverer/: Discoverer.cpp  Discoverer.h  main.cpp
